fix: char counter misalignment

--- a/src/styles/content/base/_root.scss
+++ b/src/styles/content/base/_root.scss
@@ -22,6 +22,7 @@
 
   // colors
   --#{var.$prefix}color-blue-43: hsl(214, 94%, 43%);
+  --#{var.$prefix}color-blue-42: hsl(214, 94%, 42%);
   --#{var.$prefix}color-blue-38: hsl(214, 95%, 38%);
   --#{var.$prefix}color-white: hsl(0, 0%, 100%);
   --#{var.$prefix}color-gray-95: hsl(0, 0%, 95%);
